<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/uni_text"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/uni_logo" />

        <TextView
            android:id="@+id/ivSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/promptregular"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/uni_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radioMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/student_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:checked="true"
                android:drawableLeft="@drawable/student_icon"
                android:gravity="center"
                android:text="@string/student"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/teacher_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:drawableStart="@drawable/teacher_icon"
                android:gravity="center"
                android:text="@string/faculty"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/admin_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:drawableStart="@drawable/guardian_icon"
                android:gravity="center"
                android:text="@string/guardian"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp"
                android:textStyle="bold" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:drawableStart="@drawable/email"
                android:hint=" Email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_bg"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_bg_no_padding"
                    android:drawableStart="@drawable/ic_pass"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/show_pass_icon"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="-40dp"
                    android:contentDescription="Show/Hide Password"
                    app:srcCompat="@drawable/ic_visibility" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_5dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/text_background_primary"
            android:text="SIGN IN"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/registerhere"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="left"
                android:padding="5dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>