<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:background="@color/app_background_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/uni_text"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/uni_logo" />

        <TextView
            android:id="@+id/ivSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/promptregular"
            android:padding="8dp"
            android:text="@string/uni_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/promptregular"
            android:padding="8dp"
            android:text="Select your designation :"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:orientation="vertical"
            android:padding="12dp">

            <RadioButton
                android:id="@+id/student_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:checked="true"
                android:drawableLeft="@drawable/commuter_icon"
                android:gravity="center"
                android:padding="10dp"
                android:text="Commuter"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/admin_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:drawableStart="@drawable/guardian_icon"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/guardian"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/teacher_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:drawableStart="@drawable/driver_icon"
                android:gravity="center"
                android:layout_margin="@dimen/margin_5dp"
                android:padding="10dp"
                android:textSize="20dp"
                android:text="Driver"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/et_bg_no_padding"
                android:buttonTint="@color/colorAccent"
                android:drawableStart="@drawable/management_icon"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/administrator"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@color/colorPrimaryDark"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@color/colorPrimaryDark"
            android:text="Sign in as guest"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>
</ScrollView>